[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.11

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
	  data/
	M	global.lua
		npc/lib/
	M		npc.lua
			npcsystem/
	M			keywordhandler.lua
	M			npcsystem.lua
	M			modules.lua
	M			npchandler.lua
]

[ Milestone
	Fixed a bug when noDamageToSameLookfeet was enabled that caused no damage between monsters and players if they have the same lookfeet.
	Fixed a bug with "think" global events, they were only being executed once.
	Revised NPC system and extended global.lua with more Lua functions (thanks to Cykotitan).
]