@@ -23,6 +23,8 @@
 	M The Forgotten Server.exe
 	  data/
 	M	global.lua
+		items/
+	M		items.otb
 		npc/lib/
 	M		npc.lua
 			npcsystem/
@@ -33,7 +35,10 @@
 ]
 
 [ Milestone
+	Protocol 9.0 support.
 	Fixed a bug when noDamageToSameLookfeet was enabled that caused no damage between monsters and players if they have the same lookfeet.
 	Fixed a bug with "think" global events, they were only being executed once.
+	Fixed a bug with account manager which would lead to disconnect after approximately a minute.
 	Revised NPC system and extended global.lua with more Lua functions (thanks to Cykotitan).
+	Lua function: doSendAnimatedText has been deprecated (protocol no longer supporting it).
 ]
